--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,39 +1,40 @@
 $container-xl:              1140px;
 $container-xxl:             1320px;
 $container-xxxl:            1580px + 30px;
-$body_bg_color:             #FFFFFF;
-$btn_bg_color:              #FF95E1;
-$btn_bg_color_hover:        #FF87DD;
-$btn_bg_color_active:       #FF61D3;
-$bg_dark_1:                 #040404;
-$bg_dark_2:                 #A2D3A4;
-$bg_light_1:                #E2F9E3;
+$body_bg_color:             #F5F4EB;
+/**/$btn_bg_color:              #FF95E1;
+/**/$btn_bg_color_hover:        #FF87DD;
+/**/$btn_bg_color_active:       #FF61D3;
+$bg_dark_1:                 #999FDE;
+/**/$bg_dark_2:                 #A2D3A4;
+/**/$bg_light_1:                #E2F9E3;
 /**/$bg_light_2:                #FE74AA;
 /**/$bg_light_3:                #D9D9D9;
-$font_color:                #515151;
-$font_color2:               #FFFFFF;
-$font_color3:               #898989;
-/**/$font_color4:               #544D4D;
-$font_family:               "Montserrat", sans-serif;
-$font_family2:              "MadreRose", sans-serif;
+$font_color:                #2F2F2F;
+$font_color2:               #F5F4EB;
+$font_color3:               #FFFFFF;
+$font_color4:               #4DCAE9;
+$font_color5:               #344EFF;
+$font_family:               "CeraPro", sans-serif;
+$font_family2:              "WinongExtended", sans-serif;
 $font_weight:               400;
-$font_size:                 17px;
-$font_size_mobile:          14px;
+$font_size:                 22px;
+$font_size_mobile:          15px;
 $body_mb:                   130px;
 $body_mb_lg:                130px;
 $body_mb_xs:                100px;
-$link_txt_family:           $font_family;
-$link_color:                $font_color;
-$link_hover_color:          $btn_bg_color;
-$link_active_color:         $btn_bg_color_active;
+/**/$link_txt_family:           $font_family;
+/**/$link_color:                $font_color;
+/**/$link_hover_color:          $btn_bg_color;
+/**/$link_active_color:         $btn_bg_color_active;
 /**/$link_hover_color1:         #bd7667; //unuse
 /**/$link_hover_color2:         $link_hover_color; //unuse
-$footer_height:             160px;
-$footer_height_lg:          160px;
-$footer_height_xs:          141px;
-$footer_text_color:         #FFFFFF;
-$footer_text_color_hover:   #FFBEED;
-$footer_text_color_active:  #FF07BA;
+$footer_height:             190px;
+$footer_height_lg:          190px;
+$footer_height_xs:          204px;
+$footer_text_color:         $font_color2;
+$footer_text_color_hover:   $font_color4;
+$footer_text_color_active:  $font_color5;
 
 //Form
 $input_bg:                  $body_bg_color;
