--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -15,10 +15,10 @@
   <title>Clickdeamor</title>
 
 </head>
-<body class="bg-pattern bg-pattern1">
+<body>
 	<header class="header header_page">
     <div class="container">
-      <div class="d-flex justify-content-center align-items-center">
+      <div class="d-flex justify-content-center justify-content-xl-start align-items-center">
         <div class="logo"></div>
       </div>
     </div>
