--- a/src/html/views/privacy.html
+++ b/src/html/views/privacy.html
@@ -1,4 +1,7 @@
 <%= _.template(require('./../includes/header.html'))() %>
+  <script>
+    document.body.classList.add('bg-color');
+  </script>
   <main class="main">
     <div class="container container_text">
       <div class="row">
