--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,23 +1,6 @@
 .footer {
-  background-color: $btn_bg_color;
+  background-color: $bg_dark_1;
   position: relative;
-
-  &::before {
-    content: '';
-    width: 100%;
-    height: 17px;
-    position: absolute;
-    top: -16px;
-    background-image: url('../img/bg/footer-m.svg');
-    background-repeat: no-repeat;
-    background-position: 50% 100%;
-    background-size: 100%;
-    @media (min-width: 992px) {
-      height: 62px;
-      background-image: url('../img/bg/footer-d.svg');
-      top: -61px;
-    }
-  }
 
   .footer__links {
     display: flex;
@@ -34,12 +17,12 @@
   }
 
   a.footer__link {
-    font-family: $font_family;
+    font-family: $font_family2;
     font-weight: 400;
     color: $footer_text_color;
-    font-size: 12px;
-    letter-spacing: 4px;
+    font-size: 10px;
     line-height: 1;
+    letter-spacing: 2px;
     text-transform: uppercase;
   }
   a.footer__link:hover {
@@ -52,12 +35,12 @@
   }
   a.footer__link {
     + a.footer__link {
-      margin-top: 18px;
+      margin-top: 26px;
     }
   }
   @media (min-width: 992px) {
     a.footer__link {
-      font-size: 18px;
+      font-size: 14px;
     }
     a.footer__link {
       margin: 0;
@@ -77,9 +60,9 @@
 }
 
 .footer__bottom {
-  padding: 30px 0 34px;
+  padding: 60px 0 50px;
   @media (min-width: 992px) {
-    padding: 56px 0 84px;
+    padding: 87px 0 86px;
     display: flex;
     flex-direction: row;
     justify-content: center;
