--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -107,17 +107,18 @@ h1 {
 h2 {
   font-family: $font_family2;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 34px;
-  color: $font_color;
-  margin-bottom: 26px;
+  font-size: 24px;
+  line-height: 41px;
+  color: $font_color2;
+  margin-bottom: 25px;
   margin-top: 0;
   text-transform: uppercase;
   text-align: center;
   @media (min-width: 992px) {
-    font-size: 56px;
-    line-height: 1.2;
-    margin-bottom: 86px;
+    text-align: left;
+    font-size: 58px;
+    line-height: 94px;
+    margin-bottom: 59px;
   }
 
   &.h2_index {
@@ -152,17 +153,17 @@ h2 {
 
 h3 {
   font-family: $font_family;
-  font-weight: 500;
-  color: $font_color;
-  font-size: 14px;
+  font-weight: 700;
+  color: $font_color2;
+  font-size: 18px;
   line-height: 39px;
-  margin-top: 40px;
-  margin-bottom: 5px;
+  margin-top: 32px;
+  margin-bottom: 7px;
   text-transform: uppercase;
   @media (min-width: 992px) {
-    font-size: 21px;
+    font-size: 22px;
     line-height: 39px;
-    margin-top: 95px;
+    margin-top: 79px;
     margin-bottom: 19px;
   }
 }
