--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -61,9 +61,10 @@
 }
 
 .form-group_btn-unsuscr {
-  margin-top: 70px;
+  margin-top: 52px;
+  max-width: 650px;
   @media (min-width: 768px) {
-    margin-top: 80px;
+    margin-top: 55px;
   }
 }
 
