--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,14 +2,14 @@ $container-xl:              1140px;
 $container-xxl:             1320px;
 $container-xxxl:            1580px + 30px;
 $body_bg_color:             #F5F4EB;
-/**/$btn_bg_color:              #FF95E1;
+$btn_bg_color:              #5E66E3;
 /**/$btn_bg_color_hover:        #FF87DD;
 /**/$btn_bg_color_active:       #FF61D3;
 $bg_dark_1:                 #999FDE;
 /**/$bg_dark_2:                 #A2D3A4;
-/**/$bg_light_1:                #E2F9E3;
-/**/$bg_light_2:                #FE74AA;
-/**/$bg_light_3:                #D9D9D9;
+$bg_light_1:                #D9D9D9;
+$bg_light_2:                #B4B4B4;
+$bg_light_3:                #99CEDB;
 $font_color:                #2F2F2F;
 $font_color2:               #F5F4EB;
 $font_color3:               #FFFFFF;
