--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -3,7 +3,7 @@
     <div class="container container_settings">
       <form action="">
         <div class="row">
-          <div class="col-12 col-xl-6">
+          <div class="col-12 col-xl-5 col-xxl-4">
             <div class="settings-photo">
               <div class="profile-photo">
                 <div class="custom-file">
@@ -18,7 +18,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-6">
+          <div class="col-12 col-xl-7 col-xxl-8">
             <div class="settings-form">
               <div class="form-group form-group_input">
                 <input class="form-control" type="text" placeholder="Age">
@@ -48,7 +48,7 @@
               <div class="form-group form-group_check">
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="customcheck customcheck_switch customcheck_switch-inline">
-                    <input type="checkbox" class="customcheck__input" name="check1" id="switch1" autocomplete="off">
+                    <input type="checkbox" class="customcheck__input" name="check1" id="switch1" checked autocomplete="off">
                     <label class="customcheck__label" for="switch1">
                       <div class="customcheck__icon"><div class="customcheck__mark"></div></div>
                       <div class="customcheck__txt">Notify me of site updates</div>
