--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -80,7 +80,7 @@ body {
 
   &.container_settings {
     @media (min-width: 992px) {
-      padding-top: 0;
+      padding-top: 15px;
     }
     @media (min-width: 1400px) {}
   }
