--- a/src/scss/btn.scss
+++ b/src/scss/btn.scss
@@ -102,14 +102,13 @@
   }
 
   &.btn_3 { //change photo
-    width: 278px;
-    height: 51px;
+    width: 214px;
+    height: 45px;
     padding: 5px 5px;
     border-radius: 0;
     font-family: $font_family;
     font-weight: 400;
-    font-size: 14px;
-    border: 1px solid $font_color !important;
+    font-size: 18px;
     background-color: $font_color2;
     background-image: none;
     color: $font_color;
@@ -119,19 +118,21 @@
     align-items: center;
     justify-content: center;
     &:hover {
-      color: $font_color;
-      background-color: $btn_bg_color_hover;
+      color: $font_color2;
+      background: $btn_bg_color_hover;
+      background: linear-gradient(90deg, #49DEEA 0%, #5E66E3 100%);
     }
     &:active {
-      color: $font_color !important;
-      background-color: $btn_bg_color_active !important;
+      color: $font_color2 !important;
+      background: $btn_bg_color_active !important;
+      background: linear-gradient(90deg, #00ECFF 0%, #3743FF 100%) !important;
     }
     @media (min-width: 992px) {}
     @media (min-width: 1200px) {
       font-size: 25px;
       padding: 15px 15px;
-      width: 353px;
-      height: 80px;
+      width: 281px;
+      height: 78px;
     }
   }
 
