--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -13,29 +13,26 @@ $settings-img-wrap-width-xl: 435px;
 $settings-img-wrap-height-xl: 670px;
 
 .settings-form {
-  transform: translateY(-10px);
-  @media (min-width: 992px) {
-    transform: translateY(-10px);
-  }
+  padding-top: 45px;
+  @media (min-width: 992px) {}
   @media (min-width: 1200px) {
-    transform: translateY(0);
-    max-width: 550px;
+    max-width: 600px;
     margin: 0 0 0 auto;
   }
   @media (min-width: 1400px) {
-    max-width: 550px;
+    max-width: 770px;
+    margin: 0 0 0 auto;
   }
   @media (min-width: 1650px) {
-    max-width: 550px;
-    margin: 0 auto;
+    max-width: 830px;
+    margin: 0;
   }
 }
 
 .settings-photo {
   margin: 0 auto;
   position: relative;
-  width: calc(100% + 40px);
-  left: -20px;
+  width: 100%;
   //overflow: hidden;
   //padding: 18px 0 0 0;
   @media (min-width: 576px) {
@@ -63,32 +60,32 @@ $settings-img-wrap-height-xl: 670px;
   display: flex;
   align-items: center;
   justify-content: center;
-  // width: $settings-img-width;
-  // max-width: $settings-img-width;
-  width: 100%;
-  max-width: 100%;
+  width: $settings-img-width;
+  max-width: $settings-img-width;
+  // width: 100%;
+  // max-width: 100%;
   height: $settings-img-height;
   max-height: $settings-img-height;
-  border-radius: 600px 600px 0 0;
-  background-color: $btn_bg_color;
+  border-radius: 115px;
+  background-color: $bg_light_4;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
   position: relative;
   z-index: 0;
+  margin: 0 auto;
   @media (min-width: 576px) {
     height: $settings-img-height;
     max-height: $settings-img-height;
   }
   @media (min-width: 992px) {
-    border-radius: 300px 300px 0 0;
+    border-radius: 195px;
     width: $settings-img-width-lg;
     max-width: $settings-img-width-lg;
     height: $settings-img-height-lg;
     max-height: $settings-img-height-lg;
   }
   @media (min-width: 1200px) {
-    border-radius: 0;
     width: $settings-img-width-lg;
     max-width: $settings-img-width-lg;
     height: $settings-img-height-lg;
@@ -110,6 +107,5 @@ $settings-img-wrap-height-xl: 670px;
   }
   @media (min-width: 1200px) {
     margin: 0;
-    height: 114px;
   }
 }
