--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -245,7 +245,7 @@ a {
 .link2 {
   font-family: $font_family;
   font-weight: 400;
-  color: $link_color;
+  color: $font_color;
   font-size: 14px;
   text-transform: uppercase;
   &:hover {
