--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -40,23 +40,23 @@
 }
 
 .form-group_input {
-  margin-bottom: 23px;
+  margin-bottom: 11px;
   @media (min-width: 1200px) {
     margin-bottom: 31px;
   }
 }
 
 .form-group_check1 {
-  margin: 25px 0;
+  margin: 22px 0 16px;
   @media (min-width: 992px) {
-    margin: 36px 0;
+    margin: 45px 0;
   }
 }
 
 .form-group_check {
-  margin: 30px 0;
+  margin: 28px 0;
   @media (min-width: 992px) {
-    margin: 40px 0;
+    margin: 45px 0;
   }
 }
 
