--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,11 +10,15 @@ $bg_dark_1:                 #999FDE;
 $bg_light_1:                #D9D9D9;
 $bg_light_2:                #B4B4B4;
 $bg_light_3:                #99CEDB;
+$bg_light_4:                #E1EDE7;
+$bg_light_5:                #D3E9DE;
 $font_color:                #2F2F2F;
 $font_color2:               #F5F4EB;
 $font_color3:               #FFFFFF;
 $font_color4:               #4DCAE9;
 $font_color5:               #344EFF;
+$font_color6:               #99A0DE;
+$font_color7:               #232323;
 $font_family:               "CeraPro", sans-serif;
 $font_family2:              "WinongExtended", sans-serif;
 $font_weight:               400;
@@ -23,10 +27,10 @@ $font_size_mobile:          15px;
 $body_mb:                   130px;
 $body_mb_lg:                130px;
 $body_mb_xs:                100px;
-/**/$link_txt_family:           $font_family;
-/**/$link_color:                $font_color;
-/**/$link_hover_color:          $btn_bg_color;
-/**/$link_active_color:         $btn_bg_color_active;
+$link_txt_family:           $font_family;
+$link_color:                $font_color;
+$link_hover_color:          $font_color4;
+$link_active_color:         $font_color5;
 /**/$link_hover_color1:         #bd7667; //unuse
 /**/$link_hover_color2:         $link_hover_color; //unuse
 $footer_height:             190px;
@@ -37,19 +41,20 @@ $footer_text_color_hover:   $font_color4;
 $footer_text_color_active:  $font_color5;
 
 //Form
-$input_bg:                  $body_bg_color;
-$input_hover_bg:            $input_bg;
+$input_bg:                  $bg_light_4;
+$input_hover_bg:            $bg_light_5;
 $input_txt_family:          $font_family;
-$input_txt_color:           $font_color;
-$input_hover_txt_color:     $font_color;
-$input_placeholder_color:   $font_color3;
-/**/$input_txt_xs_size:         14px;
+$input_txt_color:           $font_color7;
+$input_hover_txt_color:     $font_color7;
+$input_placeholder_color:   $font_color6;
+$input_txt_xs_size:         16px;
 $input_txt_xs_lh:           1.5;
-/**/$input_txt_size:            25px;
+$input_txt_size:            25px;
 $input_txt_lh:              1.5;
 $input_border_color:        $font_color;
-$input_border:              1px solid $input_border_color;
-$input_hover_border:        1px solid $bg_dark_1;
+$input_border:              none;
+$input_hover_border:        none;
+$input_hover_focus_outline: none;
 $input_border_radius:       0;
 $textarea_border_radius:    0;
 $textarea_border_radius_mob:0;
