--- a/src/html/views/user_profile.html
+++ b/src/html/views/user_profile.html
@@ -1,8 +1,8 @@
 <%= _.template(require('./../includes/header.html'))() %>
   <script>
-    document.body.classList.add('bg-color-profile');
+    document.body.classList.add('bg-color');
   </script>
-  <main class="main">
+  <main class="main main_up">
     <div class="container container_profile">
       <div class="container__inner">
         <div class="userprofile">
@@ -27,33 +27,27 @@
           <div class="userprofile__info">
             <div class="userprofile__data">
               <div class="userprofile__row">
-                <div class="userprofile__name">Anna 29</div>
-                <div class="userprofile__loc">Sidney ~ 100000km</div>
+                <div class="userprofile__name">Kristina 23</div>
+                <div class="userprofile__loc">Melbourne ~ 355km</div>
               </div>
               <div class="compatibility d-flex justify-content-between align-items-center">
                 <div class="compatibility__chart">
+                  <div class="compatibility__progress progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
                   <div class="compatibility__title">Matches</div>
-                  <div class="compatibility__progress progress">
-                    <div class="progress-item filled"></div>
-                    <div class="progress-item filled"></div>
-                    <div class="progress-item filled"></div>
-                  </div>
                 </div>
                 <div class="compatibility__chart">
+                  <div class="compatibility__progress progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
                   <div class="compatibility__title">Location</div>
-                  <div class="compatibility__progress progress">
-                    <div class="progress-item filled"></div>
-                    <div class="progress-item filled"></div>
-                    <div class="progress-item"></div>
-                  </div>
                 </div>
                 <div class="compatibility__chart">
-                  <div class="compatibility__title">Interests</div>
                   <div class="compatibility__progress progress">
-                    <div class="progress-item filled"></div>
-                    <div class="progress-item"></div>
-                    <div class="progress-item"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
+                  <div class="compatibility__title">Interests</div>
                 </div>
               </div>
               <a class="btn btn_w100 userprofile__btn d-none d-xl-block" href="#">Claim Her</a>
