--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -27,6 +27,9 @@ body {
       background-repeat: no-repeat;
       background-position: 50% 0;
       background-size: 100% 600px;
+      @media (min-width: 992px) {
+        background-size: 100% 640px;
+      }
       @media (min-width: 1200px) {
         background-image: url('../img/bg/pattern-all-d.svg');
         background-size: 100% 1210px;
@@ -90,8 +93,8 @@ body {
     @media (min-width: 768px) {
       @include make-container(30px);
     }
-    @media (min-width: 992px) {
-      padding-top: 0;
+    @media (min-width: 1200px) {
+      padding-top: 15px;
     }
   }
 
