--- a/src/scss/user-list.scss
+++ b/src/scss/user-list.scss
@@ -1,14 +1,38 @@
-$ulist-img-width: 180px;
-$ulist-img-height: 180px;
-$ulist-img-width-lg: 370px;
-$ulist-img-height-lg: 470px;
+$ulist-img-width: 150px;
+$ulist-img-height: 220px;
+$ulist-img-width-lg: 240px;
+$ulist-img-height-lg: 370px;
 
-//.user-list-wrap {}
+.main_ul {
+  background: linear-gradient(to bottom, $bg_dark_1 180px, transparent 0);
+  background-position: 50% 270px;
+  @media (min-width: 325px) {
+    background-position: 50% 235px;
+  }
+  @media (min-width: 768px) {
+    background-position: 50% 210px;
+  }
+  @media (min-width: $user_list_item_breakpoint) {
+    background: linear-gradient(to bottom, $bg_dark_1 450px, transparent 0);
+    background-position: 50% 260px;
+  }
+  @media (min-width: 1200px) {
+    margin-top: 55px;
+    background: linear-gradient(to bottom, $bg_dark_1 530px, transparent 0);
+    background-position: 50% 0;
+  }
+}
+
+.user-list-wrap {
+  @media (min-width: 1200px) {
+    transform: translateY(-55px);
+  }
+}
 
 .user-list-extra-wrap {
-  padding: 53px 0 0;
+  padding: 80px 0 0;
   @media (min-width: 1200px) {
-    padding: 183px 0 0;
+    padding: 110px 0 0;
   }
 }
 
@@ -16,11 +40,11 @@ $ulist-img-height-lg: 470px;
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 180px;
-  height: 310px;
+  width: 150px;
+  //height: 315px;
   @media (min-width: $user_list_item_breakpoint) {
-    width: 370px;
-    height: 630px;
+    width: 240px;
+    //height: 520px;
   }
 
   .user-list-item__photo {
@@ -45,7 +69,7 @@ $ulist-img-height-lg: 470px;
       max-width: $ulist-img-width;
       height: $ulist-img-height;
       max-height: $ulist-img-height;
-      border-radius: 0;
+      border-radius: 102px;
       position: relative;
       z-index: 0;
       @media (min-width: 400px) {
@@ -63,64 +87,57 @@ $ulist-img-height-lg: 470px;
   }
 
   .user-list-item__btn {
-    margin: 18px 0 0 0;
+    transform: translateY(83px);
     @media (min-width: $user_list_item_breakpoint) {
-      margin: 27px 0 0 0;
+      transform: translateY(158px);
     }
   }
 
   .user-list-item__inf {
     width: 100%;
-    background-color: $body_bg_color;
-    border-radius: 0 35px 0 0;
-    padding: 0 0 25px;
-    transform: translateY(-24px);
+    padding: 11px 0 0;
+    text-align: center;
     @media (min-width: $user_list_item_breakpoint) {
-      transform: translateY(-127px);
-      border-radius: 0 134px 0 0;
-      padding: 0 0 60px;
+      padding: 19px 0 0;
     }
   }
 
   .user-list-item__data {
-    padding: 14px 9px 0;
-    @media (min-width: $user_list_item_breakpoint) {
-      padding: 30px 20px 0;
-    }
+    @media (min-width: $user_list_item_breakpoint) {}
   }
 
   .user-list-item__row {
     width: 100%;
     display: flex;
     flex-direction: column;
-    color: $font_color;
-    padding: 0 0 11px;
+    color: $font_color2;
+    padding: 0 0 12px;
     @media (min-width: $user_list_item_breakpoint) {
-      padding: 0 0 18px;
+      padding: 0 0 20px;
     }
 
     .user-list-item__name {
       font-family: $font_family;
-      font-weight: 400;
+      font-weight: 700;
       line-height: 1;
       font-size: 14px;
-      margin-bottom: 11px;
+      margin-bottom: 7px;
       text-transform: uppercase;
       @include overflow-ellipsis;
       @media (min-width: $user_list_item_breakpoint) {
         font-size: 25px;
-        margin-bottom: 16px;
+        margin-bottom: 11px;
       }
     }
 
     .user-list-item__loc {
       font-family: $font_family;
-      font-weight: 300;
+      font-weight: 400;
       line-height: 1;
-      font-size: 9px;
+      font-size: 10px;
       @include overflow-ellipsis;
       @media (min-width: $user_list_item_breakpoint) {
-        font-size: 18px;
+        font-size: 16px;
       }
     }
   }
@@ -165,37 +182,35 @@ $ulist-img-height-lg: 470px;
 
 }
 
-.user-list-extra-bar {
-  background-color: $bg_light_1;
-  height: 280px;
-  margin-bottom: -249px;
-  @media (min-width: $user_list_item_breakpoint) {
-    height: 394px;
-    margin-bottom: -343px;
-  }
-}
-
 .user-list-title {
   font-family: $font_family2;
   font-weight: 400;
-  font-size: 19px;
-  line-height: 27px;
+  font-size: 15px;
+  line-height: 28px;
   color: $user_list_title_color;
-  margin-bottom: 28px;
+  margin-bottom: 35px;
   text-transform: uppercase;
   text-align: center;
   @media (min-width: $user_list_item_breakpoint) {
-    font-size: 36px;
-    line-height: 67px;
+    font-size: 32px;
+    line-height: 65px;
   }
   @media (min-width: 1200px) {
     text-align: left;
-    font-size: 29px;
-    line-height: 50px;
+    font-size: 28px;
+    line-height: 56px;
     margin-bottom: 0;
+    padding-top: 40px;
   }
   @media (min-width: 1400px) {
-    font-size: 36px;
-    line-height: 67px;
+    font-size: 32px;
+    line-height: 65px;
+    padding-top: 20px;
+  }
+  &.first {
+    margin-bottom: 22px;
+    @media (min-width: $user_list_item_breakpoint) {
+      margin-bottom: 35px;
+    }
   }
 }
