--- a/src/html/views/dev-signup.html
+++ b/src/html/views/dev-signup.html
@@ -1,21 +1,16 @@
 <%= _.template(require('./../includes/header-index.html'))() %>
   <script>
-    document.body.classList.add('bg-login');
+    document.body.classList.add('bg-index');
   </script>
   <main class="main">
     <header class="firstscreen firstscreen_2">
       <div class="container container_xxxl">
-        <div class="d-flex justify-content-center align-items-center">
-          <div class="logo logo_login"></div>
+        <div class="d-flex justify-content-center justify-content-xl-start align-items-center">
+          <div class="logo logo_main"></div>
         </div>
         <div class="firstscreen__inner">
-          <div class="fs-collage order-2 order-xl-1">
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main1.jpg');"></div>
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main2.jpg');"></div>
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main3.jpg');"></div>
-          </div>
-          <div class="firstscreen__info order-1 order-xl-2">
-            <div class="h1_login">Sign up to unlock<br><span>your best matches</span></div>
+          <div class="firstscreen__info">
+            <div class="h1_login"><span>Sign up to unlock</span><br>your best matches</div>
             <form action="">
               <div class="form-group form-group_login">
                 <input class="form-control form-control_login" type="text" placeholder="Email">
@@ -28,13 +23,16 @@
               </div>
             </form>
           </div>
+          <div class="fs-collage">
+            <div class="fs-collage__img"></div>
+          </div>
         </div>
       </div>
     </header>
     <section class="secondscreen secondscreen_2" style="display: block;">
-      <div class="secondscreen-bg-bar"></div>
       <div class="timer">
         <div class="timer__title text-center">Limited offer</div>
+        <div class="timer__title2 text-center">The best selection for you. Better claim them.</div>
         <div class="countdown-js" data-countdown-time="0-15-0"></div>
       </div>
       <div class="container container_xxxl">
@@ -46,102 +44,112 @@
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-04.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-04.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-05.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-05.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-06.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-06.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-01.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-07.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-02.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-01.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-03.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-02.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="splide__slide">
+                    <div class="user-list-item user-list-item_extra">
+                      <div class="user-list-item__photo">
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-03.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
+                      </div>
+                      <div class="user-list-item__inf">
+                        <div class="user-list-item__data">
+                          <div class="user-list-item__row">
+                            <div class="user-list-item__name">Kristina 23</div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </li>
@@ -152,7 +160,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <div class="h1_login2 h1_login2_my">User reviews</div>
+            <div class="h1_login2 h1_login2_my">What they say<br><span>about us</span></div>
           </div>
         </div>
         <div class="userfbacks">
