--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -55,101 +55,76 @@ $main-img-height-xxxl: 710px;
 }
 
 .fs-collage {
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  height: 212px;
   @media (min-width: 1200px) {
-    display: flex;
-    position: relative;
-    width: 560px;
-    height: 460px;
+    position: static;
+    overflow: auto;
+    height: auto;
   }
-  @media (min-width: 1400px) {
-    width: 690px;
-    height: 513px;
-  }
-}
-
-.fs-collage__item {
-  width: 100%; //280px
-  height: 290px;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
-  margin: 0 auto;
-  @media (min-width: 380px) {
-    height: 460px;
-  }
-  @media (min-width: 410px) {
-    width: 370px;
-    height: 460px;
-  }
-  @media (min-width: 992px) {}
-  @media (min-width: 1200px) {
+  .fs-collage__img {
+    background-image: url('../img/bg/collage-m.png');
+    background-repeat: no-repeat;
+    background-position: 100% 0;
+    background-size: 100%;
+    width: 445px;
+    height: 212px;
     position: absolute;
-    width: 300px;
-    height: 400px;
-    margin: 0;
-  }
-  @media (min-width: 1400px) {
-    width: 345px;
-    height: 440px;
-  }
-  @media (min-width: 1650px) {
-    width: 370px;
-    height: 460px;
-  }
-
-  &:nth-child(1) {
-    display: none;
+    left: 50%;
+    transform: translateX(-50%);
     @media (min-width: 1200px) {
-      display: block;
+      transform: none;
+      left: auto;
+      background-image: url('../img/bg/collage-d.png');
+      background-repeat: no-repeat;
+      background-position: 100% 0;
+      background-size: 100%;
+      width: 525px;
+      height: 630px;
       top: 0;
-      left: 0;
-    }
-  }
-  &:nth-child(2) {
-    display: none;
-    @media (min-width: 1200px) {
-      display: block;
-      top: 23px;
-      left: 120px;
+      right: 0;
     }
     @media (min-width: 1400px) {
-      top: 23px;
-      left: 145px;
+      width: 655px;
+      height: 775px;
+    }
+    @media (min-width: 1650px) {
+      width: 780px;
+      height: 920px;
     }
   }
-  &:nth-child(3) {
-    @media (min-width: 1200px) {
-      top: 53px;
-      left: 260px;
-    }
-    @media (min-width: 1400px) {
-      top: 53px;
-      left: 320px;
-    }
-  }
-
 }
 
 .firstscreen__info {
   display: flex;
   flex-direction: column;
   width: 248px;
-  margin: 0 auto -180px;
+  margin: 0 auto 232px;
   z-index: 2;
   @media (min-width: 992px) {
+    margin: 63px auto 232px;
     width: 280px;
   }
   @media (min-width: 1200px) {
-    margin: 0 0 0 auto;
-    width: 490px;
-    padding: 26px 0 0;
+    margin: 50px auto 60px 0;
+    width: 500px;
+    min-width: 500px;
     z-index: 0;
   }
   @media (min-width: 1400px) {
-    width: 550px;
+    width: 560px;
+    min-width: 560px;
+    margin: 63px auto 73px 0;
   }
   @media (min-width: 1650px) {
-    width: 550px;
+    width: 654px;
+    min-width: 654px;
+    margin: 63px auto 73px 0;
   }
 
   // &.firstscreen__info1 {}
