--- a/src/scss/logo.scss
+++ b/src/scss/logo.scss
@@ -11,9 +11,21 @@
   }
 
   &.logo_main {
-    margin: 50px 0 29px;
+    margin: 42px 0;
     @media (min-width: 992px) {
-      margin: 119px 0 36px;
+      margin: 119px 0 0;
+    }
+    @media (min-width: 1200px) {
+      width: 590px;
+      height: 57px;
+    }
+    @media (min-width: 1400px) {
+      width: 650px;
+      height: 57px;
+    }
+    @media (min-width: 1650px) {
+      width: 772px;
+      height: 57px;
     }
   }
 
