--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -70,36 +70,44 @@ h1 {
 }
 
 .h1_login {
-  font-family: $font_family;
+  font-family: $font_family2;
   color: $font_color;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 33px;
-  margin: 0 0 25px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.2;
+  margin: 0 0 33px;
   text-align: center;
   text-transform: uppercase;
   @media (min-width: 992px) {}
   @media (min-width: 1200px) {
     text-align: left;
-    font-size: 38px;
-    line-height: 57px;
+    font-size: 30px;
+    line-height: 48px;
     margin: 0 0 32px;
   }
   @media (min-width: 1400px) {
-    font-size: 40px;
-    line-height: 58px;
+    font-size: 35px;
+    line-height: 52px;
+    margin: 0 0 42px;
+  }
+  @media (min-width: 1650px) {
+    font-size: 42px;
+    line-height: 62px;
     margin: 0 0 42px;
   }
   span {
-    font-size: 22px;
+    font-size: 15px;
     @media (min-width: 992px) {
-      font-size: inherit;
+      font-size: 15px;
     }
     @media (min-width: 1200px) {
-      font-size: inherit;
+      font-size: 28px;
     }
     @media (min-width: 1400px) {
-      font-size: inherit;
+      font-size: 32px;
+    }
+    @media (min-width: 1650px) {
+      font-size: 36px;
     }
   }
 }
