--- a/src/html/views/dev-signup.html
+++ b/src/html/views/dev-signup.html
@@ -67,7 +67,7 @@
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Kristina 23</div>
+                            <div class="user-list-item__name">Jasmin 34</div>
                           </div>
                         </div>
                       </div>
@@ -83,7 +83,7 @@
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Kristina 23</div>
+                            <div class="user-list-item__name">Karry 19</div>
                           </div>
                         </div>
                       </div>
@@ -99,7 +99,7 @@
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Kristina 23</div>
+                            <div class="user-list-item__name">Jenny 44</div>
                           </div>
                         </div>
                       </div>
@@ -173,8 +173,8 @@
                       <div class="userfback__name">Jhon, 24</div>
                       <div class="userfback__txt">
                         <p>“I didn't know it was so easy to find the right one!</p>
-                        <p>Girls something, thank you FLIRTMATCHES!</p>
-                        <p>Guys you won't regret it!”</p>
+                        <p>Girls something, thank you CLICKDEAMOR!</p>
+                        <p>Guys you won't<br>regret it!”</p>
                       </div>
                     </div>
                   </div>
