--- a/src/scss/countdown.scss
+++ b/src/scss/countdown.scss
@@ -7,18 +7,16 @@
 	display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 187px;
+  //width: 187px;
   margin: 0 auto;
   font-family: $font_family2;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 38px;
   line-height: 1;
-	color: $font_color;
-  //padding: 10px;
+	color: $font_color2;
   @media (min-width: 1200px) {
-    width: 290px;
-    font-size: 52px;
-    padding: 10px;
+    //width: 290px;
+    font-size: 90px;
   }
 }
 
@@ -26,11 +24,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
-  height: 26px;
+  width: 70px;
+  height: 40px;
   @media (min-width: 1200px) {
-    width: 72px;
-    height: 66px;
+    width: 165px;
+    height: 85px;
   }
 
   &.clockface-item_days {
