--- a/src/scss/btn.scss
+++ b/src/scss/btn.scss
@@ -52,18 +52,25 @@
   &.btn_1 { //index
     display: block;
     width: 100%;
-    height: 69px;
-    font-size: 18px;
-    padding: 14px 10px;
+    height: 58px;
+    font-size: 13px;
+    padding: 23px 10px;
     @media (min-width: 992px) {}
     @media (min-width: 1200px) {
-      font-size: 40px;
-      height: 173px;
+      font-size: 18px;
+      height: 78px;
+      padding: 31px 15px;
+      &::after {
+        content: '';
+        display: inline-block;
+        width: 49px;
+        height: 12px;
+        background-image: url('../img/icons/arrowr.svg');;
+        background-repeat: no-repeat;
+        margin-left: 20px;
+      }
     }
-    @media (min-width: 1400px) {
-      font-size: 40px;
-      height: 173px;
-    }
+    @media (min-width: 1400px) {}
     @media (min-width: 1650px) {}
     @media (min-width: 1920px) {}
   }
