--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -26,23 +26,7 @@ $main-img-height-xxxl: 710px;
   position: relative;
 }
 
-.firstscreen_1 {
-  max-height: 505px;
-  @media (min-width: 380px) {
-    max-height: 675px;
-  }
-  @media (min-width: 992px) {
-    max-height: 790px;
-  }
-  @media (min-width: 1200px) {
-    max-height: none;
-    min-height: 985px;
-  }
-  @media (min-width: 1400px) {
-    max-height: 985px;
-    min-height: 985px;
-  }
-}
+//.firstscreen_1 {}
 
 .firstscreen__inner {
   display: flex;
@@ -125,6 +109,30 @@ $main-img-height-xxxl: 710px;
     width: 654px;
     min-width: 654px;
     margin: 63px auto 73px 0;
+  }
+
+  &.firstscreen__info_index {
+    width: 280px;
+    margin: 0 auto 306px;
+    @media (min-width: 992px) {
+      margin: 63px auto 306px;
+    }
+    @media (min-width: 1200px) {
+      margin: 47px auto 60px 0;
+      width: 500px;
+      min-width: 500px;
+      z-index: 0;
+    }
+    @media (min-width: 1400px) {
+      width: 560px;
+      min-width: 560px;
+      margin: 47px auto 73px 0;
+    }
+    @media (min-width: 1650px) {
+      width: 685px;
+      min-width: 685px;
+      margin: 47px auto 73px 0;
+    }
   }
 
   // &.firstscreen__info1 {}
