--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -12,35 +12,42 @@ h1 {
 }
 
 .h1-index {
-  font-family: $font_family;
+  font-family: $font_family2;
   color: $font_color;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 33px;
-  margin: 0 0 44px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 34px;
+  margin: 0 0 30px;
   text-align: center;
   text-transform: uppercase;
   @media (min-width: 992px) {}
   @media (min-width: 1200px) {
-    font-size: 30px;
-    line-height: 39px;
+    text-align: left;
+    font-size: 41px;
+    line-height: 70px;
     margin: 0 0 62px;
   }
   @media (min-width: 1400px) {
-    font-size: 30px;
-    line-height: 39px;
+    font-size: 46px;
+    line-height: 78px;
     margin: 0 0 62px;
   }
-  span {
-    font-size: 22px;
-    @media (min-width: 992px) {
-      font-size: inherit;
-    }
+  @media (min-width: 1650px) {
+    font-size: 58px;
+    line-height: 94px;
+    margin: 0 0 62px;
+  }
+
+  //&.h1-index_main {}
+  &.h1-index_search {
     @media (min-width: 1200px) {
-      font-size: inherit;
+      width: 530px;
     }
     @media (min-width: 1400px) {
-      font-size: inherit;
+      width: 590px;
+    }
+    @media (min-width: 1650px) {
+      width: 740px;
     }
   }
 
@@ -157,24 +164,54 @@ h2 {
   }
 
   &.h2_index {
-    font-size: 20px;
-    line-height: 34px;
-    margin-bottom: 15px;
-    text-align: center;
-    color: $font_color;
+    font-size: 24px;
+    line-height: 1.2;
+    margin-bottom: 25px;
+    color: $font_color2;
     text-transform: uppercase;
+    text-align: left;
     @media (min-width: 768px) {}
     @media (min-width: 992px) {}
     @media (min-width: 1200px) {
-      text-align: left;
-      font-size: 59px;
-      line-height: 1.2;
-      margin-bottom: 64px;
+      font-size: 90px;
+      line-height: 94px;
+      margin-bottom: 60px;
     }
     @media (min-width: 1400px) {
-      font-size: 59px;
-      line-height: 1.2;
-      margin-bottom: 64px;
+      font-size: 80px;
+      line-height: 84px;
+    }
+    @media (min-width: 1650px) {
+      font-size: 90px;
+      line-height: 94px;
+    }
+    span.letter {
+      font-size: 67px;
+      line-height: 39px;
+      @media (min-width: 1200px) {
+        font-size: 221px;
+        line-height: 39px;
+      }
+      @media (min-width: 1400px) {
+        font-size: 170px;
+        line-height: 39px;
+      }
+      @media (min-width: 1650px) {
+        font-size: 221px;
+        line-height: 39px;
+      }
+    }
+    span.smaller {
+      @media (min-width: 1200px) {
+        font-size: 55px;
+        line-height: 1.2;
+      }
+      @media (min-width: 1400px) {
+        font-size: 46px;
+      }
+      @media (min-width: 1650px) {
+        font-size: 55px;
+      }
     }
   }
 }
