--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,7 +6,7 @@ $btn_bg_color:              #5E66E3;
 /**/$btn_bg_color_hover:        #FF87DD;
 /**/$btn_bg_color_active:       #FF61D3;
 $bg_dark_1:                 #999FDE;
-/**/$bg_dark_2:                 #A2D3A4;
+$bg_dark_2:                 #2F2F2F;
 $bg_light_1:                #D9D9D9;
 $bg_light_2:                #B4B4B4;
 $bg_light_3:                #99CEDB;
