--- a/src/html/views/dev-index.html
+++ b/src/html/views/dev-index.html
@@ -3,13 +3,13 @@
     document.body.classList.add('bg-index');
   </script>
   <main class="main">
-    <header class="firstscreen firstscreen_1">
+    <header class="firstscreen">
       <div class="container container_xxxl">
         <div class="d-flex justify-content-center justify-content-xl-start align-items-center">
           <div class="logo logo_main"></div>
         </div>
         <div class="firstscreen__inner">
-          <div class="firstscreen__info firstscreen__info_index">
+          <div class="firstscreen__info firstscreen__info1">
             <div class="h1-index h1-index_main" style="display: block;">Combinations<br>for your best&nbsp;<br class="d-none d-xl-block">&&nbsp;<br class="d-xl-none">Hot evening</div>
             <div class="h1-index h1-index_search" style="display: none;">Searching your<br>best matches</div>
             <div class="fsi-btn">
