--- a/src/html/views/dev-login.html
+++ b/src/html/views/dev-login.html
@@ -3,13 +3,13 @@
     document.body.classList.add('bg-index');
   </script>
   <main class="main">
-    <header class="firstscreen firstscreen_2">
+    <header class="firstscreen">
       <div class="container container_xxxl">
         <div class="d-flex justify-content-center justify-content-xl-start align-items-center">
           <div class="logo logo_main"></div>
         </div>
         <div class="firstscreen__inner">
-          <div class="firstscreen__info">
+          <div class="firstscreen__info firstscreen__info2">
             <div class="h1_login"><span>Enter email to unlock</span><br>your best matches</div>
             <form action="">
               <div class="form-group form-group_login">
