--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -111,7 +111,7 @@ $main-img-height-xxxl: 710px;
     margin: 63px auto 73px 0;
   }
 
-  &.firstscreen__info_index {
+  &.firstscreen__info1 {
     width: 280px;
     margin: 0 auto 306px;
     @media (min-width: 992px) {
@@ -135,7 +135,6 @@ $main-img-height-xxxl: 710px;
     }
   }
 
-  // &.firstscreen__info1 {}
   // &.firstscreen__info2 {}
   // &.firstscreen__info3 {}
 }
