--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -5,46 +5,30 @@
   </div>
 
   <main class="main">
-    <header class="firstscreen firstscreen_1">
+    <header class="firstscreen">
       <div class="container container_xxxl">
-        <div class="d-flex justify-content-center align-items-center">
+        <div class="d-flex justify-content-center justify-content-xl-start align-items-center">
           <div class="logo logo_main"></div>
         </div>
-        <div class="h1-index h1-index_main">Combinations for your&nbsp;<br class="d-xl-none"><span>best & Hot evening</span></div>
-        <div class="h1-index h1-index_search" style="display: none;">searching your&nbsp;<br class="d-xl-none"><span>best matches</span></div>
-        <div class="fsi-collage">
-          <div class="fsi-collage__item" style="background-image: url('assets/img/bg/main1i.jpg');"></div>
-          <div class="fsi-collage__item" style="background-image: url('assets/img/bg/main2.jpg');"></div>
-          <div class="fsi-collage__item" style="background-image: url('assets/img/bg/main3.jpg');"></div>
-        </div>
-        <div class="fsi-btn">
-          <button class="btn btn_1 btn-index">Unlock My Matches</button>
-          <div class="search-progress progress" style="display: none;">
-            <div class="search-progress__title">
-              <span class="search-progress__span search-progress__span1" style="display: inline">by locations</span>
-              <span class="search-progress__span search-progress__span2" style="display: none">by interests</span>
-              <span class="search-progress__span search-progress__span3" style="display: none">by gender match</span>
-              <span class="search-progress__value">0%</span>
-            </div>
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <header class="firstscreen firstscreen_2" style="display: none;">
-      <div class="container container_xxxl">
-        <div class="d-flex justify-content-center align-items-center">
-          <div class="logo logo_login"></div>
-        </div>
         <div class="firstscreen__inner">
-          <div class="fs-collage order-2 order-xl-1">
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main1.jpg');"></div>
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main2.jpg');"></div>
-            <div class="fs-collage__item" style="background-image: url('assets/img/bg/main3.jpg');"></div>
+          <div class="firstscreen__info firstscreen__info1">
+            <div class="h1-index h1-index_main" style="display: block;">Combinations<br>for your best&nbsp;<br class="d-none d-xl-block">&&nbsp;<br class="d-xl-none">Hot evening</div>
+            <div class="h1-index h1-index_search" style="display: none;">Searching your<br>best matches</div>
+            <div class="fsi-btn">
+              <button class="btn btn_1 btn-index" style="display: block;">Unlock My Matches</button>
+              <div class="search-progress progress" style="display: none;">
+                <div class="search-progress__title">
+                  <span class="search-progress__span search-progress__span1" style="display: inline">by locations</span>
+                  <span class="search-progress__span search-progress__span2" style="display: none">by interests</span>
+                  <span class="search-progress__span search-progress__span3" style="display: none">by gender match</span>
+                  <span class="search-progress__value">0%</span>
+                </div>
+                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
           </div>
-          <div class="firstscreen__info order-1 order-xl-2">
-            <div class="h1_login">Sign up to unlock<br><span>your best matches</span></div>
+          <div class="firstscreen__info firstscreen__info2" style="display: none;">
+            <div class="h1_login"><span>Sign up to unlock</span><br>your best matches</div>
             <form action="">
               <div class="form-group form-group_login">
                 <input class="form-control form-control_login" type="text" placeholder="Email">
@@ -57,6 +41,9 @@
               </div>
             </form>
           </div>
+          <div class="fs-collage">
+            <div class="fs-collage__img"></div>
+          </div>
         </div>
       </div>
     </header>
@@ -65,16 +52,16 @@
       <div class="container container_xxxl">
         <div class="row">
           <div class="col">
-            <h2 class="h2_index">Release&nbsp;My&nbsp;<br class="d-xl-none">combinations</h2>
             <div class="row">
-              <div class="col-12 col-xl-6 pe-xl-5">
+              <div class="col-12 col-xxl-6 pe-xxl-5">
+                <h2 class="h2_index"><span class="letter">R</span>elease&nbsp;<br class="d-none d-xl-block"><span class="smaller">My&nbsp;<br class="d-xl-none">combinations</span></h2>
+              </div>
+              <div class="col-12 col-xxl-6 ps-xxl-5">
                 <p class="pmain">We have created a unique combination system that consists of three main factors that produce
                   similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated
                   form, connects people who have interests in similar activities, passions and future aspirations. We
                   also add our own personal touch to the online dating process ensuring that your experience is
                   special and exclusive to you.</p>
-              </div>
-              <div class="col-12 col-xl-6 ps-xl-5">
                 <p class="pmain">Instead of spending weeks looking for your best combination, we send you a personalized combination
                   every day by email. As these presentations have been carefully selected based on your NF (Life,
                   Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
@@ -86,9 +73,9 @@
     </section>
 
     <section class="secondscreen secondscreen_2" style="display: none;">
-      <div class="secondscreen-bg-bar"></div>
       <div class="timer">
         <div class="timer__title text-center">Limited offer</div>
+        <div class="timer__title2 text-center">The best selection for you. Better claim them.</div>
         <div class="countdown-js" data-countdown-time="0-15-0"></div>
       </div>
       <div class="container container_xxxl">
@@ -100,102 +87,112 @@
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-04.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-04.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-05.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-05.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Jasmin 34</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-06.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-06.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Karry 19</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-01.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-07.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Jenny 44</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-02.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-01.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
                       </div>
                     </div>
                   </li>
                   <li class="splide__slide">
                     <div class="user-list-item user-list-item_extra">
                       <div class="user-list-item__photo">
-                        <div class="user-list-item__img"
-                          style="background-image: url('assets/img/photos/user-extra-03.jpg');"></div>
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-02.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
                       </div>
                       <div class="user-list-item__inf">
                         <div class="user-list-item__data">
                           <div class="user-list-item__row">
-                            <div class="user-list-item__name">Anna 29</div>
-                            <div class="user-list-item__loc">Sidney ~ 100000km</div>
+                            <div class="user-list-item__name">Kristina 23</div>
                           </div>
                         </div>
-                        <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="splide__slide">
+                    <div class="user-list-item user-list-item_extra">
+                      <div class="user-list-item__photo">
+                        <div class="user-list-item__img" style="background-image: url('assets/img/photos/user-extra-03.jpg');">
+                          <a class="user-list-item__btn btn btn_2 btn_w100" href="#">Claim Her</a>
+                        </div>
+                      </div>
+                      <div class="user-list-item__inf">
+                        <div class="user-list-item__data">
+                          <div class="user-list-item__row">
+                            <div class="user-list-item__name">Kristina 23</div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </li>
@@ -206,7 +203,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <div class="h1_login2 h1_login2_my">User reviews</div>
+            <div class="h1_login2 h1_login2_my">What they say<br><span>about us</span></div>
           </div>
         </div>
         <div class="userfbacks">
@@ -219,8 +216,8 @@
                       <div class="userfback__name">Jhon, 24</div>
                       <div class="userfback__txt">
                         <p>“I didn't know it was so easy to find the right one!</p>
-                        <p>Girls something, thank you FLIRTMATCHES!</p>
-                        <p>Guys you won't regret it!”</p>
+                        <p>Girls something, thank you CLICKDEAMOR!</p>
+                        <p>Guys you won't<br>regret it!”</p>
                       </div>
                     </div>
                   </div>
@@ -264,6 +261,7 @@
         </div>
       </div>
     </section>
+
   </main>
 
 <%= _.template(require('./../includes/animation-js.html'))() %>
